<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/exercise_card_background">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autoedittext_edit_exercise_name">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextTextPersonName"
            android:layout_alignParentStart="true">

            <RadioButton
                android:id="@+id/radiobutton_edit_exercise_reps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reps" />

            <RadioButton
                android:id="@+id/radiobutton_edit_exercise_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time" />
        </RadioGroup>

        <EditText
            android:id="@+id/edittext_edit_exercise_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextTextPersonName"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/radioGroup"
            android:ems="6"
            android:gravity="center"
            android:hint="@string/amount"
            android:inputType="number" />

    </LinearLayout>

    <AutoCompleteTextView
        android:id="@+id/autoedittext_edit_exercise_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="16"
        android:hint="@string/new_exercise_name"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_edit_exercise_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <Button
        android:id="@+id/button_edit_exercise_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@+id/button_edit_exercise_save"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
</androidx.constraintlayout.widget.ConstraintLayout>