<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".WorkoutFragment">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="1183dp"
        android:layout_height="807dp"
        android:src="@drawable/backgroound_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
            android:id="@+id/edittext_workout_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/workout_name"
            android:textSize="24sp"
            android:textColor="#FFFFFF"
            android:inputType="textPersonName"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_exercise"
        android:layout_width="match_parent"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:textAlignment="center"
        android:layout_height="302dp"
        android:layout_gravity="center"
        android:layout_marginTop="11dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_workout_name">

    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/button_workout_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_marginBottom="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/btn_round_edges_white"/>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_exercise">

        <Button
            android:id="@+id/addExerciseButton"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:background="@drawable/btn_round_edges_white"
            android:text="@string/add_exercise" />

        <Button
            android:id="@+id/addPauseButton"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:background="@drawable/btn_round_edges_white"
            android:text="@string/add_pause"
            android:layout_marginLeft="25dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>